--- a/index.html
+++ b/index.html
@@ -1,100 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cargloss Helmet - Catalogue</title>
-
-  <style>
-    /* ======== Background Stylish ======== */
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(135deg, #0a0f14, #1a2733);
-      background-image:
-        radial-gradient(circle at 20% 20%, rgba(255,255,255,0.05), transparent 60%),
-        radial-gradient(circle at 80% 80%, rgba(255,255,255,0.05), transparent 60%);
-      font-family: 'Poppins', sans-serif;
-      color: white;
-      overflow: hidden;
-    }
-
-    /* ======== Heading / Title ======== */
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      text-align: center;
-      letter-spacing: 1px;
-      font-weight: 600;
-      text-transform: uppercase;
-      color: #f5f5f5;
-    }
-
-    /* ======== Frame Booklet ======== */
-    .catalogue-container {
-      position: relative;
-      width: 90%;
-      max-width: 1200px;
-      aspect-ratio: 3 / 2;
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 0 60px rgba(0, 0, 0, 0.5),
-                  0 0 80px rgba(0, 255, 255, 0.2);
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-    }
-
-    /* ======== FlippingBook Link Style ======== */
-    .fbo-embed {
-      display: block;
-      width: 100%;
-      height: 100%;
-    }
-
-    /* ======== Subtle floating animation ======== */
-    .catalogue-container {
-      animation: float 6s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0px); }
-      50% { transform: translateY(-10px); }
-    }
-
-    footer {
-      position: absolute;
-      bottom: 15px;
-      text-align: center;
-      font-size: 0.9rem;
-      opacity: 0.7;
-    }
-  </style>
-</head>
-<body>
-
-  <h1>📘 Cargloss Helmet Catalogue</h1>
-
-  <div class="catalogue-container">
-    <a href="https://online.flippingbook.com/view/483449014/"
-       class="fbo-embed"
-       data-fbo-id="984f28410c"
-       data-fbo-ratio="3:2"
-       data-fbo-lightbox="yes"
-       data-fbo-width="100%"
-       data-fbo-height="auto"
-       data-fbo-version="1"
-       style="max-width: 100%">
-       Cargloss Helmet - Catalogue
-    </a>
-  </div>
-
-  <footer>© 2025 Cargloss Helmet | Interactive Catalogue</footer>
-
-  <script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=483449014"></script>
-
-</body>
-</html>
+<a href="https://online.flippingbook.com/view/483449014/" class="fbo-embed" data-fbo-id="984f28410c" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">Cargloss Helmet - Catalogue</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=483449014"></script>
