--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <link rel="preconnect" href="https://cdnc.heyzine.com">
 <link rel="canonical" href="https://heyzine.com/flip-book/6e364be3b1.html" />
+<link rel="icon" type="image/png" href="https://freeimage.host/i/fC0j9LB"/>
 
 <title>Online Flipbook</title>
 <meta itemprop="name" content="Online Flipbook">
@@ -574,3 +575,4 @@
         
     </body>
 </html>
+
