--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <link rel="preconnect" href="https://cdnc.heyzine.com">
 <link rel="canonical" href="https://heyzine.com/flip-book/6e364be3b1.html" />
-<link rel="icon" type="image/png" href="https://freeimage.host/i/fC0j9LB"/>
+<link rel="icon" type="image/png" href="https://i.ibb.co.com/4RcPxpZZ/cargloss.png">
 
 <title>Online Flipbook</title>
 <meta itemprop="name" content="Online Flipbook">
@@ -575,4 +575,5 @@
         
     </body>
 </html>
+
 
